--- a/AngularApp/src/app/manager/manager.component.html
+++ b/AngularApp/src/app/manager/manager.component.html
@@ -1,3 +1,3 @@
-<button (click)="findGame()">Go To Game Component</button><br>
-<button (click)="callJoinRoom()">Join "myRoom"</button>
-<button (click)="callPingRoom()">Ping the room</button>
+<button (click)="goToGame()">Go To Game Component</button>
+
+<button (click)="submitDeck()">Add deck</button>
