removed the html version of the game

--- a/AngularApp/src/app/game/game.component.html
+++ b/AngularApp/src/app/game/game.component.html
@@ -1,6 +1,6 @@
 <script src="node_modules/pixi.js/dist/pixi.min.js"></script>
 <button *ngIf="!gamestate" (click)="findRoomClick()">Search for a game</button>
-<div *ngIf="gamestate">
+<!-- <div *ngIf="gamestate">
   <div id="statDiv">
     <p>You<span *ngIf="activeBool">*</span>:     HP: {{ playerHealth }} Mana: {{ playerManaCurrent }}/{{ playerManaTotal }}     Opponent<span *ngIf="!activeBool">*</span>:     HP: {{ opponentHealth }} Mana: {{ opponentManaCurrent }}/{{ opponentManaTotal }}</p>
   </div>
@@ -36,4 +36,4 @@
     <button (click)="playCard(playInput)">Play</button><br>
     <button (click)="endTurn()">End Turn</button>
   </div>
-</div>
+</div> -->
